--- a/Домашне завдання 3.2.ipynb
+++ b/Домашне завдання 3.2.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1 Варіант 1 "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,8 +14,7 @@
     }
    ],
    "source": [
-    "lst = [12, 3, 4, 10]   # тут можна міняти список для перевірки\n",
-    "\n",
+    "lst = [12, 3, 4, 10]   \n",
     "if len(lst) == 0:\n",
     "    result = lst\n",
     "elif len(lst) == 1:\n",
