--- a/Домашне завдання 3.3.ipynb
+++ b/Домашне завдання 3.3.ipynb
@@ -8,6 +8,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 варіант"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "middle = (len(lst) + 1) // 2\n",
+    "result = [lst[:middle], lst[middle:]]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2], [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1, 2, 3]\n",
+    "\n",
+    "middle = (len(lst) + 1) // 2\n",
+    "result = [lst[:middle], lst[middle:]]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "middle = (len(lst) + 1) // 2\n",
+    "result = [lst[:middle], lst[middle:]]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1]\n",
+    "\n",
+    "middle = (len(lst) + 1) // 2\n",
+    "result = [lst[:middle], lst[middle:]]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = []\n",
+    "\n",
+    "middle = (len(lst) + 1) // 2\n",
+    "result = [lst[:middle], lst[middle:]]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 варіант "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
