--- a/Домашне завдання 3.2.ipynb
+++ b/Домашне завдання 3.2.ipynb
@@ -1,6 +1,104 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 варіант зі слайсами "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 12, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [12, 3, 4, 10]\n",
+    "\n",
+    "result = lst[-1:] + lst[:-1]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1]\n",
+    "\n",
+    "result = lst[-1:] + lst[:-1]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = []\n",
+    "\n",
+    "result = lst[-1:] + lst[:-1]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 12, 3, 4, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [12, 3, 4, 10, 8]\n",
+    "\n",
+    "result = lst[-1:] + lst[:-1]\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 варіант "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
